# modsecurity-exception-factory

./: .project  .pydevproject  README.rst  requirements.txt  setup.cfg  setup.py  version.conf
modsecurity_exception_factory/: __init__.py  config.py  modsecurity_audit_correlation_engine.py  modsecurity_audit_correlator.py  modsecurity_audit_entry.py  modsecurity_audit_entry_message.py  modsecurity_exception.py  modsecurity_exception_writer.py  orange_correlation_engine.py  orange_data_table_factory.py
modsecurity_exception_factory/commands/: command_modsecurity_exception_factory.py
modsecurity_exception_factory/correlation/: __init__.py  correlation.py  correlation_engine.py  correlation_merge_delegate.py  correlation_progress_listener_console.py  correlation_serializer_yaml.py  i_correlation_progress_listener.py  i_item_data_source.py  i_item_iterable.py
modsecurity_exception_factory/modsecurity_audit_data_source/: __init__.py  i_modsecurity_audit_data_source.py  modsecurity_audit_data_source_sql.py  modsecurity_audit_item_dict_iterable_sql.py  (+7 more)
proof-of-concept/: modsecurity_exception_factory.py  sample.tab
tests/: common.py  data.py  test_command_modsecurity_exception_factory.py  test_config.py  test_correlation.py  test_correlation_engine.py  test_correlation_merge_delegate.py  test_correlation_serializer_yaml.py  test_modsecurity_audit_correlation_engine.py  test_modsecurity_audit_correlator.py  test_modsecurity_audit_data_source_sql.py  test_modsecurity_audit_entry_data_source_sql.py  test_modsecurity_audit_log_parser.py  test_modsecurity_exception_writer.py
(+17 files in other folders)
