[metadata]
name = modsecurity-exception-factory
version = 0.1.0
author = Younes JAAIDI
author_email = yjaaidi@shookalabs.com
maintainer = Younes JAAIDI
maintainer_email = yjaaidi@shookalabs.com
home_page = https://github.com/shookalabs/modsecurity-exception-factory
download_url = https://pypi.python.org/pypi/modsecurity-exception-factory/
summary = A tool that generates ModSecurity exception rules by automatically analyzing ModSecurity audit logs.
description-file = README.rst
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Utilities
platform = any
license = MIT
requires-python = >=2.7
requires-dist =
    pysynthetic(>=0.4, <0.5)
    PyYAML(>=3.10, <3.11)
    sqlalchemy(>=0.8, <0.9)

[files]
packages =
    modsecurity_exception_factory
    modsecurity_exception_factory.modsecurity_audit_log_parser
    modsecurity_exception_factory.correlation
    modsecurity_exception_factory.commands
    modsecurity_exception_factory.utils
    modsecurity_exception_factory.modsecurity_audit_data_source

